''' Comfort '''

Further work to resolve issue [ticket:750]

''' Macro '''

Changed debug trace for running a macro to be announced at FINE level rather than INFO, should reduce log file size


== 4/May/09 Released [attachment:wiki:SoftwareReleases:eLife-1.6b94.zip V1.6-b94]  [attachment:wiki:SoftwareReleases:eLife-1.6b94-libs.zip Libs-V1.6b94] ==

''' Comfort '''

Added parameter name for analog poll timing;
both ANALOG_POLL_VALUE and ANALOGUE_POLL_VALUE can be used.

Possible fix for thread state exception in the analog reader when comfort reconnects from a
dropped communication link. Resolves issue [ticket:750]


''' Jetty '''

Added HTTP Forwarding to Jetty. Implements enhancement [ticket:751]

Added !ForwardRequest servlet to handle the request forwarding.

In any config file CONTROL block add a forward section as follows, to access the image the 
URL would be !https://servername:8443/forward/camera.jpg .

You should ensure the extension on the forward matches the file type to ensure maximum
browser compatibility (eg. .gif for a destination .gif etc.)


{{{
        <CONTROLS>
        	<FORWARDS>
        		<FORWARD ACTIVE="Y" SRC="camera.jpg" DEST="http://127.0.0.1:8081/image.jpg" />
        	</FORWARDS>
        </CONTROLS>
}}}

See  https://turnip.buildingintelligence.com.au/trac.cgi/wiki/ServerDocs/RequestForward for details.

== 12/Mar/09 Released [attachment:wiki:SoftwareReleases:eLife-1.6b93.zip V1.6-b93]  [attachment:wiki:SoftwareReleases:eLife-1.6b93-libs.zip Libs-V1.6b93] ==

''' Macros '''

Changed stop to be a synonym for abort rather than complete. Ticket [ticket:749]

== 4/Mar/09 Released [attachment:wiki:SoftwareReleases:eLife-1.6b92.zip V1.6-b92]  ==

''' Macros '''

Fixed issue where macros with a KEY being replaced by an EXTRA field would not correctly populate the KEY when run from a cient button.


''' General '''
