@@ -6,6 +6,13 @@ Further work to resolve issue [ticket:750]
 
 Changed debug trace for running a macro to be announced at FINE level rather than INFO, should reduce log file size
 
+''' CBUS '''
+
+Ensure CBUS does not hang on IllegalStateException on device reconnect
+
+''' HAL '''
+
+Ensure HAL does not hang on IllegalStateException on device reconnect
 
 == 4/May/09 Released [attachment:wiki:SoftwareReleases:eLife-1.6b94.zip V1.6-b94]  [attachment:wiki:SoftwareReleases:eLife-1.6b94-libs.zip Libs-V1.6b94] ==
 
